[scheduler] Plumb information about active webrtc connections to scheduler

Notify scheduler about webrtc connections.

BUG=690929

Review-Url: https://codereview.chromium.org/2683993006
Cr-Commit-Position: refs/heads/master@{#449640}

Former-commit-id: 407bdb243f9dd1d94f7e99318a7f60df1f421dfa