third_party/WebKit/Source/modules/peerconnection/RTCPeerConnection.cpp
@@ -521,6 +521,9 @@ RTCPeerConnection::RTCPeerConnection(ExecutionContext* context,
         NotSupportedError, "Failed to initialize native PeerConnection.");
     return;
   }
+
+  m_connectionHandleForScheduler =
+      document->frame()->frameScheduler()->onActiveConnectionCreated();
 }
 
 RTCPeerConnection::~RTCPeerConnection() {
@@ -1352,6 +1355,8 @@ void RTCPeerConnection::releasePeerConnectionHandler() {
   m_dispatchScheduledEventRunner->stop();
 
   m_peerHandler.reset();
+
+  m_connectionHandleForScheduler.reset();
 }
 
 void RTCPeerConnection::closePeerConnection() {
@@ -1426,6 +1431,8 @@ void RTCPeerConnection::closeInternal() {
   Document* document = toDocument(getExecutionContext());
   HostsUsingFeatures::countAnyWorld(
       *document, HostsUsingFeatures::Feature::RTCPeerConnectionUsed);
+
+  m_connectionHandleForScheduler.reset();
 }
 
 void RTCPeerConnection::scheduleDispatchEvent(Event* event) {
